# bazel_rules_vunit

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: build.yml  tag-and-release.yml
integration/: BUILD.bazel  MODULE.bazel  test.vhdl  test_93_2002.vhdl  vhdl_ls.toml  vhdl_ls.toml.add
integration/tool.nvc/: BUILD.bazel
tool.nvc/: BUILD.bazel
