load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "vhdl_standard",
    build_setting_default = "2019",
    values = [
        "1993",
        "2002",
        "2008",
        "2019",
    ],
)

config_setting(
    name = "vhdl_1993",
    flag_values = {":vhdl_standard": "1993"},
)

config_setting(
    name = "vhdl_2002",
    flag_values = {":vhdl_standard": "2002"},
)

config_setting(
    name = "vhdl_2008",
    flag_values = {":vhdl_standard": "2008"},
)

config_setting(
    name = "vhdl_2019",
    flag_values = {":vhdl_standard": "2019"},
)

sh_test(
    name = "test",
    srcs = [
        "test.bash",
    ],
    size = "small",
)
