package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = [
        "test.vhdl",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_lib",
    ],
)

filegroup(
    name = "vunit_srcs",
    srcs = [
        "@vunit//:srcs",
        "@vunit//:random_srcs",
        "@vunit//:path_srcs",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_vunit_lib",
    ],
)
