package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = [
        "test.vhdl",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_lib",
    ],
)

filegroup(
    name = "vunit_srcs",
    srcs = [
        "@vunit//:srcs",
        "@vunit//:random_srcs",
        "@vunit//:path_srcs",
    ],
    tags = [
        "vhdl_ls",
        "vhdl_ls_lib_vunit_lib",
        "vhdl_ls_rem_external/+_repo_rules+vunit/vunit",
        "vhdl_ls_add_third_party/vunit/src/vunit",
    ],
)
