module(name= "integration", version = "0.0.0")


bazel_dep(name = "bazel_rules_nvc", version = "0.5.2")


bazel_dep(name = "bazel_rules_vunit", version = "0.0.0")
local_path_override(
    module_name = "bazel_rules_vunit",
    path = "../",
)


bazel_dep(name = "toolchains_llvm", version = "1.5.0", dev_dependency = True)
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.4",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all", dev_dependency = True)

