load("@rules_nvc//build/nvc:rules.bzl", "vhdl_test")

vhdl_test(
    name = "lib",
    srcs = [
        "//:srcs",
    ],
    deps = [
        "@rules_vunit//tool.nvc:vunit_lib",
    ] + select({
        "@rules_vunit//:vhdl_2019": [
            "@rules_osvvm//tool.nvc:osvvm",
        ],
        "//conditions:default": [],
    }),
    entities = [
        "tb",
        "tb_cfg_default",
    ],
    standard = select({
        "@rules_vunit//:vhdl_1993": "1993",
        "@rules_vunit//:vhdl_2002": "2002",
        "@rules_vunit//:vhdl_2008": "2008",
        "@rules_vunit//:vhdl_2019": "2019",
        "//conditions:default": "2019",
    }),
)
